# evoq

./: .flake8  LICENSE.md  README.md  pyproject.toml
.github/workflows/: codeql.yml  unittests.yml  verification.yml
tests/: test_module.py
